--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\alu201530116\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\Brusca\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
