--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ repositories {
 
 
 dependencies {
+    //compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.6.1'
+    //compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.6.1'	
     compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-jersey')
 	compile('org.springframework.boot:spring-boot-starter-mail')
